# QoLib

./: .gitignore  README.md  pyproject.toml
src/: alphabet.py  core.py  fg.py  main.py
src/commands/: __init__.py  alphabet.py  ports.py
src/modules/: alphabet.py  ports.py
